# autodiff-nd

./: .gitignore  Cargo.toml  README.md  readme.md
benches/: framework_bench.rs  matmul_bench.rs  pytorch_bench.py  training_bench.rs
examples/: flash_attention.rs  lazy_mnist.rs  mnist_cnn.rs
scripts/: plot_benchmarks.py
src/: activations_test.rs  batchnorm.rs  engine.rs  engine_test.rs  lib.rs  linear.rs  linear_optimizer_test.rs  loss_test.rs  matrix_ops_test.rs  module.rs  ops_test.rs  optimizers.rs  training_test.rs
src/compiler/: context.rs  exec.rs  mod.rs  pass.rs
src/models/: mlp.rs  mod.rs
src/ops/: activation.rs  advanced_loss.rs  attention.rs  conv.rs  dropout.rs  elementwise.rs  imaging.rs  loss.rs  matrix.rs  mod.rs  reduce.rs
tests/: activations_test.rs  conv_test.rs  custom_autograd_test.rs  engine_test.rs  imaging_test.rs  linear_optimizer_test.rs  loss_test.rs  matrix_ops_test.rs  ops_test.rs  serialization_test.rs  training_test.rs
